Code Cleanup ByteDecoder, ByteEncoder, TelegramDateUtil