@@ -67,7 +67,7 @@ public class ByteDecoder {
             int var5 = var4.length;
 
             for(int var6 = 0; var6 < var5; ++var6) {
-                FIELD var7 = (FIELD)var4[var6].getAnnotation(FIELD.class);
+                FIELD var7 = var4[var6].getAnnotation(FIELD.class);
                 int var8 = var7.length();
                 String var9 = var4[var6].getName();
 
@@ -82,7 +82,7 @@ public class ByteDecoder {
                             var3 += var8;
                             break;
                         case NUMBER:
-                            DATATYPE var14 = (DATATYPE)var4[var6].getAnnotation(DATATYPE.class);
+                            DATATYPE var14 = var4[var6].getAnnotation(DATATYPE.class);
                             var8 += var14.sign_length();
                             var8 += var14.point_length();
                             byte[] var15 = TelegramUtil.cutBytes(var1, var3, var8);
@@ -109,7 +109,7 @@ public class ByteDecoder {
                                         throw var42;
                                     }
 
-                                    var37 = new Integer(var39);
+                                    var37 = Integer.valueOf(var39);
                                     var3 += 8;
                                     ArrayList var41 = new ArrayList();
 
@@ -135,7 +135,7 @@ public class ByteDecoder {
                                     continue;
                                 case MESSAGE:
                                     byte[] var43 = TelegramUtil.cutBytes(var1, var3, 2);
-                                    var37 = new Integer(new String(var43));
+                                    var37 = Integer.valueOf(new String(var43));
                                     var3 += 2;
                                     ArrayList var46 = new ArrayList();
 
@@ -193,7 +193,7 @@ public class ByteDecoder {
                     var11.setFieldName(var9);
                     var11.setFtype(var7.type().getTypeName());
                     var11.setObjName(var2.getClass().getName());
-                    var11.setPointer((long)var3);
+                    var11.setPointer(var3);
                     var11.setMsg(var34.toString());
                     var11.setParser("ByteDecoder");
                     var11.setStackTrace(var34.getStackTrace());
